--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "ravendb"  
 	],
   "dependencies" : {
-	"request": "2.1.x",
-	"fibers": ">=0.6"
+	"request": "2.1.x"
   },
   "noAnalyze": true,
   "devDependencies": {
