--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "raven",
+  "name": "raven-shell",
   "preferGlobal": "true",
   "version": "0.0.1",
   "author": "Tony Heupel <tonyheupel@gmail.com>",
-  "description": "a command-line interface to RavenDB",
+  "description": "A command-line interface to RavenDB",
   "contributors": [ 
     {
     } 
   ],
   "bin": {
-    "http-server": "./bin/http-server"
+    "raven": "raven"
   },
   "scripts": {
-    "start": "node ./bin/http-server",
+    "start": "raven",
     "test": "vows --spec --isolate"
   },
-  "main": "./raven",
+  "main": "./shell",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tchype/raven-cli.git"
+    "url": "https://github.com/tchype/raven-shell.git"
   },
   "keywords": [
     "cli",
     "ravendb"  
 	],
   "dependencies" : {
-	"request": "2.1.x"
+	"ravendb": ">=0.0.1"
   },
   "noAnalyze": true,
   "devDependencies": {
