remove raven.bat and make bin

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "raven": "shell.js"
   },
   "scripts": {
-    "start": "raven",
+    "start": "raven"
   },
   "main": "./shell",
   "repository": {
